# tratativa-base-415

./: Dockerfile  README.md  app.py  main.py  main_v2.py  models.py  pyproject.toml  report.py
instance/: database.db
src/: report.py  report_415.py
src/functions/: fetch_consult.py  login.py  url_access.py
src/websocket/: driver.py
ssw/: __init__.py  report.py  ssw.py
ssw/functions/: __init__.py  download.py  files.py  logger.py  login.py  reports.py  tools.py
ssw/selenium/: driver.py
static/css/: style.css
templates/: index.html  login.html
